Customize tab bar to allow dynamic color change

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native-gesture-handler": "^1.0.10",
     "react-native-maps": "^0.22.1",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.4"
+    "react-navigation": "^3.0.4",
+    "react-navigation-tabs": "^1.0.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
